--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <h1>Swapnil Bankar</h1>
       <p>
         I'm
-        <span class="typed" data-typed-items="Web Developer,Freelancer,Open Source Contributer"></span>
+        <span class="typed" data-typed-items="Web Developer...,Freelancer...,Open Source Contributer..."></span>
       </p>
     </div>
   </section>
