--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
       <div style="display: block;width: 18%; margin: auto; align-items: center;">
         <Button type="submit"
           style="background: #149ddd;border: 0;padding: 10px 24px;color: #fff;transition: 0.4s;border-radius: 4px;">
-          <a href="https://drive.google.com/file/d/1LNQ1uSGsVI_yTyhP6sXyPOs5C8l4wVcI/view?usp=drive_link" target="_blank" style="color: #fff;" download="Swapnil's-Resume">Download CV</a>
+          <a href="https://drive.google.com/file/d/1LNQ1uSGsVI_yTyhP6sXyPOs5C8l4wVcI/view?usp=sharing" target="_blank" style="color: #fff;" download="Swapnil's-Resume">Download CV</a>
         </Button>
       </div>
     </section>
