--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <h1>Swapnil Bankar</h1>
       <p>
         I'm
-        <span class="typed" data-typed-items="Web Developer...,Freelancer...,Open Source Contributer..."></span>
+        <span class="typed" data-typed-items="Full-Stack Developer...,Software Engineer...,Open Source Contributer..."></span>
       </p>
     </div>
   </section>
@@ -96,14 +96,11 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-            results-driven web developer intern with 1.5 years at Global Child
-            Prodigy. Proficient in HTML, CSS, JavaScript ,AngularJS, MySQL,
-            Node.js, and Java, collaborative spirit, and a commitment to
-            exceptional results.
+            Results-driven Full-Stack Developer with experience at miniOrange, skilled in Angular, React-Js, Firebase, Node.js, and scalable web solutions. A university rank holder from SKNCOE, Pune, with a passion for building high-performance applications.
           </p>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin-top: 15px;">
           <div class="col-lg-4" data-aos="fade-right">
             <img src="assets/img/pro.png" class="img-fluid" style="border-radius: 22px;" alt="" />
           </div>
@@ -139,7 +136,7 @@
                 <ul>
                   <li>
                     <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                    <span>21</span>
+                    <span>22</span>
                   </li>
                   <li>
                     <i class="bi bi-chevron-right"></i>
@@ -226,10 +223,6 @@
                     alt="c" width="40" height="40" /> Java
                 </li>
                 <li>
-                  <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg" alt="c"
-                    width="40" height="40" />C++
-                </li>
-                <li>
                   <img
                     src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"
                     alt="javascript" width="40" height="40" style="margin-right: 1px;" />JavaScript
@@ -260,23 +253,28 @@
             <div class="resume-item">
               <ul>
                 <li>
-                  <img src="https://angular.io/assets/images/logos/angular/angular.svg" alt="angular" width="40"
-                    height="40" />Angular
+                  <img src="https://angular.io/assets/images/logos/angular/angular.svg" alt="angular" width="40" height="40" />
+                  Angular
                 </li>
                 <li>
-                  <img
-                    src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg"
-                    alt="react" width="40" height="40" />React
+                  <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg"
+                    alt="react" width="40" height="40" /> React
                 </li>
                 <li>
-                  <img
-                    src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg"
-                    alt="bootstrap" width="40" height="40" />Bootstrap
+                  <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain-wordmark.svg"
+                    alt="bootstrap" width="40" height="40" /> Bootstrap
+                </li>
+                <li>
+                  <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original-wordmark.svg"
+                    alt="nodejs" width="40" height="40" /> Node.js
+                </li>
+                <li>
+                  <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/php/php-original.svg"
+                    alt="php" width="40" height="40" /> PHP
                 </li>
               </ul>
             </div>
-
-          </div>
+          </div>          
         </div>
       </div>
     </section>
@@ -331,7 +329,7 @@
                   retrieval, and updates in MySQL, resulting in heightened
                   system performance and reliability.
                 </li>
-                <li>Link - <a href="#">github Repository</a></li>
+                <!-- <li>Link - <a href="#">github Repository</a></li> -->
               </ul>
             </div>
 
@@ -339,7 +337,7 @@
             <div class="resume-item">
               <h4>NEW WEBSITE</h4>
               <h5>Feb 2023 - Feb 2023</h5>
-              <p><em>TechStack- [ React-JS, Rapid API]</em></p>
+              <p><em>TechStack- [ React-JS, REST API]</em></p>
               <ul>
                 <li>
                   Developed a ReactJS and RapidAPI powered news website for
@@ -354,7 +352,7 @@
                   RapidAPI for real-time news.Designed an intuitive interface
                   ensuring seamless browsing and interaction.
                 </li>
-                <li>Link - <a href="#">github Repository</a></li>
+                <!-- <li>Link - <a href="#">github Repository</a></li> -->
               </ul>
             </div>
           </div>
@@ -362,15 +360,35 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
 
+            <div class="resume-item">
+              <h4>Software Engineer</h4>
+              <h5>Aug 2024 - Preesent</h5>
+              <p><em>miniOrange Security Software PVT.LTD</em></p>
+              <ul>
+                <li>
+                  Collaborated in a team to design and implement REST API plugin, improving system performance and scalability to support 50% more concurrent users.
+                </li>
+                <li>
+                  Implemented an API auditing feature, increasing security by tracking 100% of API requests and identifying vulnerabilities.
+                </li>
+                <li>
+                  Enhanced an existing JWT login plugin by adding cookie-based session management, reducing session-related issues by 30% and enabling seamless auto logout for shared sessions.
+                </li>
+                <li>
+                  TechStack- [ PHP,React-JS, HTML, CSS, JavaScript, Bootstrap, NodeJs, REST API, MySQL]
+                </li>
+              </ul>
+            </div>
+
             <!-- // experience 1 -->
             <div class="resume-item">
               <h4>Full-Stack Developer Intern</h4>
-              <h5>Feb 2022 - Present</h5>
+              <h5>Feb 2022 - Feb 2024</h5>
               <p><em>Global Child Prodigy Award PVT.LTD </em></p>
               <ul>
                 <li>
                   Developed engaging web applications using AngularJS and
-                  Firebase, contributing significantly during a 1.5-year
+                  Firebase, contributing significantly during a 2-year
                   internship.
                 </li>
                 <li>
@@ -389,32 +407,6 @@
               </ul>
             </div>
 
-            <!-- // experience 2 -->
-            <div class="resume-item">
-              <h4>Software Developer Intern</h4>
-              <h5>Jun 2022 - Aug 2022</h5>
-              <p><em>Appscms Technologies PVT.LTD</em></p>
-              <ul>
-                <li>
-                  Played a pivotal role in developing online chart and graph
-                  functionalities using Advanced JS and Jekyll during a
-                  3-month internship.
-                </li>
-                <li>
-                  Enhanced functionality and user experience, resolving 150+
-                  bugs and improving code efficiency by 70 perc.
-                </li>
-                <li>
-                  Developed and integrated features that drove a 20 percent
-                  boost in user engagement.
-                </li>
-                <li>
-                  TechStack- [HTML,CSS, Advanced JavaScript, Bootstrap,
-                  jekyll]
-                </li>
-              </ul>
-            </div>
-
             <!-- //Achievements -->
 
             <h3 class="resume-title">Achievements</h3>
@@ -423,8 +415,6 @@
                 <li>
                   Solved 500+ questions based on Data Structure and Algorithm
                   on various Coding Platforms.
-                </li>
-                <li>Team Leader at Meet.Worktez Project.</li>
                 <li>
                   Participated in Google Summer of Code (GSOC) 2022,
                   contributing to Rocket.Chat.
@@ -448,7 +438,7 @@
       <div style="display: block;width: 18%; margin: auto; align-items: center;">
         <Button type="submit"
           style="background: #149ddd;border: 0;padding: 10px 24px;color: #fff;transition: 0.4s;border-radius: 4px;">
-          <a href="https://drive.google.com/file/d/1LNQ1uSGsVI_yTyhP6sXyPOs5C8l4wVcI/view?usp=sharing" target="_blank" style="color: #fff;" download="Swapnil's-Resume">Download CV</a>
+          <a href="https://drive.google.com/uc?export=download&id=1-83-93kjyJK_xxYgKecU2JH5555-fO97" target="_blank" style="color: #fff;" download="Swapnil's-Resume">Download CV</a>
         </Button>
       </div>
     </section>
